trying to minimize memory footprint

--- a/model-training.ipynb
+++ b/model-training.ipynb
@@ -112,11 +112,11 @@
    "outputs": [],
    "source": [
     "import pickle as pkl\n",
-    "\n",
     "import gzip\n",
     "\n",
-    "with gzip.open(\"models.pkl.gz\", 'wb') as f:\n",
-    "    pkl.dump(models, f)"
+    "for name, model in models.items():\n",
+    "    with gzip.open(f\"data/models/{name}.pkl.gz\", 'wb') as f:\n",
+    "        pkl.dump(model, f)"
    ]
   },
   {
@@ -126,7 +126,7 @@
    "outputs": [],
    "source": [
     "scores = client.gather(scores)\n",
-    "with gzip.open(\"scores.pkl.gz\", \"wb\") as f:\n",
+    "with gzip.open(\"data/scores.pkl.gz\", \"wb\") as f:\n",
     "    pkl.dump(scores, f)"
    ]
   },
