refactored out some functions, added tests

--- a/model-training.ipynb
+++ b/model-training.ipynb
@@ -13,10 +13,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "%matplotlib inline\n",
+    "%config InlineBackend.figure_format = 'retina'\n",
+    "\n",
     "from dask.distributed import LocalCluster, Client\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -34,12 +39,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "cluster = LocalCluster()\n",
-    "client = Client(cluster)"
+    "client = Client()"
    ]
   },
   {
@@ -53,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +208,7 @@
        "14  [115.131, 146.1451, 131.1736, 119.1197, 131.17...  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +363,7 @@
        "[3 rows x 99 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -379,45 +383,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.ensemble import RandomForestRegressor\n",
-    "from sklearn.model_selection import cross_val_score\n",
-    "\n",
-    "\n",
-    "def fit_model(data, features, target):\n",
-    "    import janitor\n",
-    "    model = RandomForestRegressor(n_estimators=300)\n",
-    "    \n",
-    "    resistance_data = features.join(data[target]).dropna()\n",
-    "    X, y = resistance_data.get_features_targets(target_column_names=target)\n",
-    "    \n",
-    "    model.fit(X, y)\n",
-    "    return model\n",
-    "\n",
-    "\n",
-    "def cross_validate(data, features, target):\n",
-    "    import janitor\n",
-    "    model = RandomForestRegressor(n_estimators=500)\n",
-    "    \n",
-    "    resistance_data = features.join(data[target]).dropna()\n",
-    "    X, y = resistance_data.get_features_targets(target_column_names=target)\n",
-    "    \n",
-    "    return -cross_val_score(model, X, y, scoring='neg_mean_squared_error', cv=5)\n",
-    "\n",
-    "\n",
-    "def predict(model, sequence):\n",
-    "    \"\"\"\n",
-    "    :param model: sklearn model\n",
-    "    :param sequence: A string, should be 99 characters long.\n",
-    "    \"\"\"\n",
-    "    assert len(sequence) == 99\n",
-    "    assert set(sequence) == set(molecular_weights.keys())\n",
-    "    \n",
-    "    seqfeat = featurize_sequence_(sequence)\n",
-    "    return model.predict(seqfeat)"
+    "from utils import featurize_sequence_, fit_model, cross_validate, predict"
    ]
   },
   {
@@ -429,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -446,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
