--- a/home.ipynb
+++ b/home.ipynb
@@ -1441,20 +1441,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.holoviews_exec.v0+json": "",
       "text/html": [
-       "<div id='1001'>\n",
+       "<div id='1004'>\n",
        "\n",
        "\n",
        "\n",
        "\n",
        "\n",
-       "  <div class=\"bk-root\" id=\"7d7153bb-3e5e-479f-a0d0-3a14f6c314d4\" data-root-id=\"1001\"></div>\n",
+       "  <div class=\"bk-root\" id=\"0a8c4532-6fbd-45ca-9b61-5ef21e129040\" data-root-id=\"1004\"></div>\n",
        "</div>\n",
        "<script type=\"application/javascript\">\n",
        "    function msg_handler(msg) {\n",
@@ -1469,7 +1469,7 @@
        "        console.log(\"Python failed with the following traceback:\", metadata.traceback)\n",
        "      } else {\n",
        "        \n",
-       "var plot_id = \"1001\";\n",
+       "var plot_id = \"1004\";\n",
        "if (plot_id in window.PyViz.plot_index) {\n",
        "  var plot = window.PyViz.plot_index[plot_id];\n",
        "} else {\n",
@@ -1501,14 +1501,14 @@
        "    if ((window.PyViz == undefined) || (!window.PyViz.comm_manager)) {\n",
        "      console.log(\"Could not find comm manager\")\n",
        "    } else {\n",
-       "      window.PyViz.comm_manager.register_target('1001', '62aed025435749a1b41312a9ea3914eb', msg_handler);\n",
+       "      window.PyViz.comm_manager.register_target('1004', '310e3ece7ca5476bbfc3a68ebd533ca8', msg_handler);\n",
        "    }\n",
        "    \n",
        "(function(root) {\n",
        "  function embed_document(root) {\n",
        "    \n",
-       "  var docs_json = {\"f54a3d23-32c6-4858-804e-32c03d95cdfd\":{\"roots\":{\"references\":[{\"attributes\":{\"margin\":[5,5,5,5],\"name\":\"Markdown00013\",\"text\":\"<h1>Minimal Panel</h1>\\n<p>Welcome! Minimal panel is a project by <a href=\\\"https://ericmjl.github.io\\\">Eric J. Ma</a> \\nto showcase how to build a multi-source app using <a href=\\\"https://panel.pyviz.org\\\"><code>panel</code></a>,\\na project that is part of the PyViz family of projects\\nsponsored by Anaconda and built by the Python data science community.</p>\"},\"id\":\"1002\",\"type\":\"Div\"},{\"attributes\":{\"children\":[{\"id\":\"1002\",\"type\":\"Div\"},{\"id\":\"1003\",\"type\":\"Div\"}],\"margin\":[0,0,0,0],\"name\":\"Column00017\"},\"id\":\"1001\",\"type\":\"Column\"},{\"attributes\":{\"margin\":[5,5,5,5],\"name\":\"Markdown00015\",\"text\":\"<h2>Contents</h2>\\n<ol>\\n<li><a href=\\\"/minimal-panel\\\">HIV Drug Resistance Prediction</a></li>\\n</ol>\"},\"id\":\"1003\",\"type\":\"Div\"}],\"root_ids\":[\"1001\"]},\"title\":\"Bokeh Application\",\"version\":\"1.2.0\"}};\n",
-       "  var render_items = [{\"docid\":\"f54a3d23-32c6-4858-804e-32c03d95cdfd\",\"roots\":{\"1001\":\"7d7153bb-3e5e-479f-a0d0-3a14f6c314d4\"}}];\n",
+       "  var docs_json = {\"c345610c-b001-474d-a127-a1bde3ce3221\":{\"roots\":{\"references\":[{\"attributes\":{\"margin\":[5,5,5,5],\"name\":\"Markdown00013\",\"text\":\"<h1>Minimal Panel</h1>\\n<p>Welcome! Minimal panel is a project by <a href=\\\"https://ericmjl.github.io\\\">Eric J. Ma</a> \\nto showcase how to build a multi-source app using <a href=\\\"https://panel.pyviz.org\\\"><code>panel</code></a>,\\na project that is part of the PyViz family of projects\\nsponsored by Anaconda and built by the Python data science community.</p>\"},\"id\":\"1006\",\"type\":\"Div\"},{\"attributes\":{\"children\":[{\"id\":\"1005\",\"type\":\"Div\"},{\"id\":\"1006\",\"type\":\"Div\"},{\"id\":\"1007\",\"type\":\"Div\"}],\"margin\":[0,0,0,0],\"name\":\"Column00022\"},\"id\":\"1004\",\"type\":\"Column\"},{\"attributes\":{\"margin\":[5,5,5,5],\"name\":\"Markdown00020\",\"text\":\"<p><a href=\\\"/home\\\">Home</a> | \\n<a href=\\\"/minimal-panel\\\">HIV Resistance</a></p>\"},\"id\":\"1005\",\"type\":\"Div\"},{\"attributes\":{\"margin\":[5,5,5,5],\"name\":\"Markdown00015\",\"text\":\"<h2>Contents</h2>\\n<ol>\\n<li><a href=\\\"/minimal-panel\\\">HIV Drug Resistance Prediction</a></li>\\n</ol>\"},\"id\":\"1007\",\"type\":\"Div\"}],\"root_ids\":[\"1004\"]},\"title\":\"Bokeh Application\",\"version\":\"1.2.0\"}};\n",
+       "  var render_items = [{\"docid\":\"c345610c-b001-474d-a127-a1bde3ce3221\",\"roots\":{\"1004\":\"0a8c4532-6fbd-45ca-9b61-5ef21e129040\"}}];\n",
        "  root.Bokeh.embed.embed_items_notebook(docs_json, render_items);\n",
        "\n",
        "  }\n",
@@ -1533,20 +1533,22 @@
       "text/plain": [
        "Column\n",
        "    [0] Markdown(str)\n",
-       "    [1] Markdown(str)"
+       "    [1] Markdown(str)\n",
+       "    [2] Markdown(str)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {
       "application/vnd.holoviews_exec.v0+json": {
-       "id": "1001"
+       "id": "1004"
       }
      },
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pn.Column(intro, contents).servable()"
+    "from nav import navpane\n",
+    "pn.Column(navpane, intro, contents).servable()"
    ]
   },
   {
