add iris data explorer to home notebook

--- a/home.ipynb
+++ b/home.ipynb
@@ -1435,6 +1435,7 @@
     "## Contents\n",
     "\n",
     "1. [HIV Drug Resistance Prediction](/minimal-panel)\n",
+    "2. [Iris Data Explorer](/iris)\n",
     "\n",
     "\"\"\")"
    ]
