--- a/home.ipynb
+++ b/home.ipynb
@@ -2,7 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "%matplotlib inline\n",
+    "%config InlineBackend.figure_format = 'retina'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -1418,6 +1430,7 @@
    ],
    "source": [
     "import panel as pn\n",
+    "\n",
     "pn.extension()\n",
     "\n",
     "\n",
@@ -1437,25 +1450,26 @@
     "1. [HIV Drug Resistance Prediction](/minimal-panel)\n",
     "2. [Iris Data Explorer](/iris)\n",
     "\n",
+    "The source repository is available [on GitHub](https://github.com/ericmjl/minimal-panel-app)\n",
     "\"\"\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.holoviews_exec.v0+json": "",
       "text/html": [
-       "<div id='1004'>\n",
+       "<div id='1001'>\n",
        "\n",
        "\n",
        "\n",
        "\n",
        "\n",
-       "  <div class=\"bk-root\" id=\"0a8c4532-6fbd-45ca-9b61-5ef21e129040\" data-root-id=\"1004\"></div>\n",
+       "  <div class=\"bk-root\" id=\"20569ce4-e8ea-4bb1-84e9-eed3f7e5bdb0\" data-root-id=\"1001\"></div>\n",
        "</div>\n",
        "<script type=\"application/javascript\">\n",
        "    function msg_handler(msg) {\n",
@@ -1470,7 +1484,7 @@
        "        console.log(\"Python failed with the following traceback:\", metadata.traceback)\n",
        "      } else {\n",
        "        \n",
-       "var plot_id = \"1004\";\n",
+       "var plot_id = \"1001\";\n",
        "if (plot_id in window.PyViz.plot_index) {\n",
        "  var plot = window.PyViz.plot_index[plot_id];\n",
        "} else {\n",
@@ -1502,14 +1516,14 @@
        "    if ((window.PyViz == undefined) || (!window.PyViz.comm_manager)) {\n",
        "      console.log(\"Could not find comm manager\")\n",
        "    } else {\n",
-       "      window.PyViz.comm_manager.register_target('1004', '310e3ece7ca5476bbfc3a68ebd533ca8', msg_handler);\n",
+       "      window.PyViz.comm_manager.register_target('1001', 'de5145c3d94b4fa0bf2f734f1692d205', msg_handler);\n",
        "    }\n",
        "    \n",
        "(function(root) {\n",
        "  function embed_document(root) {\n",
        "    \n",
-       "  var docs_json = {\"c345610c-b001-474d-a127-a1bde3ce3221\":{\"roots\":{\"references\":[{\"attributes\":{\"margin\":[5,5,5,5],\"name\":\"Markdown00013\",\"text\":\"<h1>Minimal Panel</h1>\\n<p>Welcome! Minimal panel is a project by <a href=\\\"https://ericmjl.github.io\\\">Eric J. Ma</a> \\nto showcase how to build a multi-source app using <a href=\\\"https://panel.pyviz.org\\\"><code>panel</code></a>,\\na project that is part of the PyViz family of projects\\nsponsored by Anaconda and built by the Python data science community.</p>\"},\"id\":\"1006\",\"type\":\"Div\"},{\"attributes\":{\"children\":[{\"id\":\"1005\",\"type\":\"Div\"},{\"id\":\"1006\",\"type\":\"Div\"},{\"id\":\"1007\",\"type\":\"Div\"}],\"margin\":[0,0,0,0],\"name\":\"Column00022\"},\"id\":\"1004\",\"type\":\"Column\"},{\"attributes\":{\"margin\":[5,5,5,5],\"name\":\"Markdown00020\",\"text\":\"<p><a href=\\\"/home\\\">Home</a> | \\n<a href=\\\"/minimal-panel\\\">HIV Resistance</a></p>\"},\"id\":\"1005\",\"type\":\"Div\"},{\"attributes\":{\"margin\":[5,5,5,5],\"name\":\"Markdown00015\",\"text\":\"<h2>Contents</h2>\\n<ol>\\n<li><a href=\\\"/minimal-panel\\\">HIV Drug Resistance Prediction</a></li>\\n</ol>\"},\"id\":\"1007\",\"type\":\"Div\"}],\"root_ids\":[\"1004\"]},\"title\":\"Bokeh Application\",\"version\":\"1.2.0\"}};\n",
-       "  var render_items = [{\"docid\":\"c345610c-b001-474d-a127-a1bde3ce3221\",\"roots\":{\"1004\":\"0a8c4532-6fbd-45ca-9b61-5ef21e129040\"}}];\n",
+       "  var docs_json = {\"39860927-1af7-4d29-b72b-c8065eaed40d\":{\"roots\":{\"references\":[{\"attributes\":{\"children\":[{\"id\":\"1002\",\"type\":\"Div\"},{\"id\":\"1003\",\"type\":\"Div\"},{\"id\":\"1004\",\"type\":\"Div\"}],\"margin\":[0,0,0,0],\"name\":\"Column00012\"},\"id\":\"1001\",\"type\":\"Column\"},{\"attributes\":{\"margin\":[5,5,5,5],\"name\":\"Markdown00006\",\"text\":\"<h1>Minimal Panel</h1>\\n<p>Welcome! Minimal panel is a project by <a href=\\\"https://ericmjl.github.io\\\">Eric J. Ma</a> \\nto showcase how to build a multi-source app using <a href=\\\"https://panel.pyviz.org\\\"><code>panel</code></a>,\\na project that is part of the PyViz family of projects\\nsponsored by Anaconda and built by the Python data science community.</p>\"},\"id\":\"1003\",\"type\":\"Div\"},{\"attributes\":{\"margin\":[5,5,5,5],\"name\":\"Markdown00008\",\"text\":\"<h2>Contents</h2>\\n<ol>\\n<li><a href=\\\"/minimal-panel\\\">HIV Drug Resistance Prediction</a></li>\\n<li><a href=\\\"/iris\\\">Iris Data Explorer</a></li>\\n</ol>\\n<p>The source repository is available <a href=\\\"https://github.com/ericmjl/minimal-panel-app\\\">on GitHub</a></p>\"},\"id\":\"1004\",\"type\":\"Div\"},{\"attributes\":{\"margin\":[5,5,5,5],\"name\":\"Markdown00010\",\"text\":\"<p><a href=\\\"/home\\\">Home</a> | \\n<a href=\\\"/hiv-resistance\\\">HIV Resistance</a> | \\n<a href=\\\"/iris\\\">Iris</a></p>\"},\"id\":\"1002\",\"type\":\"Div\"}],\"root_ids\":[\"1001\"]},\"title\":\"Bokeh Application\",\"version\":\"1.2.0\"}};\n",
+       "  var render_items = [{\"docid\":\"39860927-1af7-4d29-b72b-c8065eaed40d\",\"roots\":{\"1001\":\"20569ce4-e8ea-4bb1-84e9-eed3f7e5bdb0\"}}];\n",
        "  root.Bokeh.embed.embed_items_notebook(docs_json, render_items);\n",
        "\n",
        "  }\n",
@@ -1538,10 +1552,10 @@
        "    [2] Markdown(str)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {
       "application/vnd.holoviews_exec.v0+json": {
-       "id": "1004"
+       "id": "1001"
       }
      },
      "output_type": "execute_result"
