--- a/model-training.ipynb
+++ b/model-training.ipynb
@@ -41,7 +41,19 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ericmjl/anaconda/envs/minimal-panel/lib/python3.7/site-packages/distributed/dashboard/core.py:72: UserWarning: \n",
+      "Port 8787 is already in use. \n",
+      "Perhaps you already have a cluster running?\n",
+      "Hosting the diagnostics dashboard on a random port instead.\n",
+      "  warnings.warn(\"\\n\" + msg)\n"
+     ]
+    }
+   ],
    "source": [
     "client = Client()"
    ]
@@ -57,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +156,7 @@
        "      <td>ID: 4426-0\\nName: &lt;unknown name&gt;\\nDescription:...</td>\n",
        "      <td>1.0</td>\n",
        "      <td>99</td>\n",
-       "      <td>[115.131, 146.1451, 131.1736, 119.1197, 131.17...</td>\n",
+       "      <td>[[115.131, 146.1451, 131.1736, 119.1197, 131.1...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
@@ -162,7 +174,7 @@
        "      <td>ID: 4432-0\\nName: &lt;unknown name&gt;\\nDescription:...</td>\n",
        "      <td>1.0</td>\n",
        "      <td>99</td>\n",
-       "      <td>[115.131, 146.1451, 131.1736, 119.1197, 131.17...</td>\n",
+       "      <td>[[115.131, 146.1451, 131.1736, 119.1197, 131.1...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
@@ -180,7 +192,7 @@
        "      <td>ID: 4664-0\\nName: &lt;unknown name&gt;\\nDescription:...</td>\n",
        "      <td>1.0</td>\n",
        "      <td>99</td>\n",
-       "      <td>[115.131, 146.1451, 131.1736, 119.1197, 131.17...</td>\n",
+       "      <td>[[115.131, 146.1451, 131.1736, 119.1197, 131.1...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -203,12 +215,12 @@
        "14  ID: 4664-0\\nName: <unknown name>\\nDescription:...     1.0          99   \n",
        "\n",
        "                                             features  \n",
-       "6   [115.131, 146.1451, 131.1736, 119.1197, 131.17...  \n",
-       "7   [115.131, 146.1451, 131.1736, 119.1197, 131.17...  \n",
-       "14  [115.131, 146.1451, 131.1736, 119.1197, 131.17...  "
+       "6   [[115.131, 146.1451, 131.1736, 119.1197, 131.1...  \n",
+       "7   [[115.131, 146.1451, 131.1736, 119.1197, 131.1...  \n",
+       "14  [[115.131, 146.1451, 131.1736, 119.1197, 131.1...  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +375,7 @@
        "[3 rows x 99 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -383,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -440,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -454,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
