fix home navigation import

--- a/home.ipynb
+++ b/home.ipynb
@@ -1562,7 +1562,7 @@
     }
    ],
    "source": [
-    "from nav import navpane\n",
+    "from utils import navpane\n",
     "pn.Column(navpane, intro, contents).servable()"
    ]
   },
